# ga_test

./: Cargo.toml  README.md
src/: main.rs
src/config/: config.json  ga_input.json
src/core/: csvdata.rs  data.rs  ga.rs  json.rs  mod.rs  model.rs  ode_solver.rs  utils.rs
src/ode/: ga.rs  ga_json.rs  mod.rs  model.rs
src/ode/config/: ga_input.json
src/ode/tests/: ga_iterations.txt  ode_results.txt  sir_data.csv  sir_results.txt
src/tests/: ga_result.txt  sir_data.csv  sir_results.txt
