[package]
name = "ga_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
csv = "1.3.0"
quicksort = "1.1.0"
rand = "0.8.5"
vecshard = "0.2.1"
ode_solvers = { path = "./crates/ode-solvers-main" }
serde = {version ="1.0.197", features=["derive"]}
serde_json = "1.0.115"
mexprp = "0.3.1"
rayon = "1.10.0"
